force-app/main/default/objects/sked__Holiday__c/fields/sked__End_Date__c.field-meta.xml
<CustomField>
    <fullName>sked__End_Date__c</fullName>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>