force-app/main/default/objects/sked__Holiday__c/fields/sked__Global__c.field-meta.xml
<CustomField>
    <fullName>sked__Global__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the Holiday across the whole organisation?</description>
    <inlineHelpText>Is the Holiday across the whole organisation?</inlineHelpText>
    <label>Global</label>
    <type>Checkbox</type>
</CustomField>