force-app/main/default/objects/sked__Holiday__c/fields/sked__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>sked__Start_Date__c</fullName>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>