force-app/main/default/objects/sked__Holiday__c/validationRules/sked__StartDate_Before_EndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>sked__StartDate_Before_EndDate</fullName>
    <active>true</active>
    <errorConditionFormula>sked__End_Date__c &lt; sked__Start_Date__c</errorConditionFormula>
    <errorMessage>End Date must be greater than Start Date</errorMessage>
</ValidationRule>