force-app/main/default/objects/sked__Holiday__c/listViews/sked__All.listView-meta.xml
<ListView>
    <fullName>sked__All</fullName>
    <columns>NAME</columns>
    <columns>sked__Start_Date__c</columns>
    <columns>sked__End_Date__c</columns>
    <columns>sked__Global__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>